--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "http": "^0.0.1-security",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
