--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
+    "postmark": "^4.0.5",
     "sequelize": "^6.37.5",
     "uuid": "^11.1.0"
   },
